--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-.list_call{
+.list_call_box{
+    display: flex;
 
     width: fit-content;
     height: fit-content;
@@ -6,8 +7,26 @@
 
 }
 
+.list_call{
+
+    width: 10vw;
+    height: fit-content;
+
+
+
+}
+.title{
+    width: 100vw;
+    height: fit-content;
+
+}
+
 body{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    flex-direction: column;
+    height: 150vh;
+
 }
